--- a/quanlydatphongkhachsan/quanlydatphongkhachsan.csproj
+++ b/quanlydatphongkhachsan/quanlydatphongkhachsan.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8ACBC307-C314-47DC-A2E7-1D3801AC584B}</ProjectGuid>
+    <ProjectGuid>{E2AE5F88-E7EA-461F-BD7E-2B88EF0F8893}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WindowsFormsQuanLyDatPhongKhachSan</RootNamespace>
-    <AssemblyName>WindowsFormsQuanLyDatPhongKhachSan</AssemblyName>
+    <RootNamespace>quanlydatphongkhachsan</RootNamespace>
+    <AssemblyName>quanlydatphongkhachsan</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -44,64 +44,61 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DatPhongKhachSan.cs">
+    <Compile Include="fGiaoDienChinh.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DatPhongKhachSan.Designer.cs">
-      <DependentUpon>DatPhongKhachSan.cs</DependentUpon>
+    <Compile Include="fGiaoDienChinh.Designer.cs">
+      <DependentUpon>fGiaoDienChinh.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="fLogin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="fLogin.Designer.cs">
+      <DependentUpon>fLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
+    <Compile Include="fQuanLyPhong.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <Compile Include="fQuanLyPhong.Designer.cs">
+      <DependentUpon>fQuanLyPhong.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form3.cs">
+    <Compile Include="fThemDonDatPhong.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form3.Designer.cs">
-      <DependentUpon>Form3.cs</DependentUpon>
+    <Compile Include="fThemDonDatPhong.Designer.cs">
+      <DependentUpon>fThemDonDatPhong.cs</DependentUpon>
     </Compile>
-    <Compile Include="LoaiPhong.cs">
+    <Compile Include="fThemKhachHang.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LoaiPhong.Designer.cs">
-      <DependentUpon>LoaiPhong.cs</DependentUpon>
+    <Compile Include="fThemKhachHang.Designer.cs">
+      <DependentUpon>fThemKhachHang.cs</DependentUpon>
+    </Compile>
+    <Compile Include="fThongTinKhachHang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fThongTinKhachHang.Designer.cs">
+      <DependentUpon>fThongTinKhachHang.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SuaThongTinKhachHang.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SuaThongTinKhachHang.Designer.cs">
-      <DependentUpon>SuaThongTinKhachHang.cs</DependentUpon>
-    </Compile>
-    <Compile Include="SuaThongTinNguoiDung.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SuaThongTinNguoiDung.Designer.cs">
-      <DependentUpon>SuaThongTinNguoiDung.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="DatPhongKhachSan.resx">
-      <DependentUpon>DatPhongKhachSan.cs</DependentUpon>
+    <EmbeddedResource Include="fGiaoDienChinh.resx">
+      <DependentUpon>fGiaoDienChinh.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="fLogin.resx">
+      <DependentUpon>fLogin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <EmbeddedResource Include="fQuanLyPhong.resx">
+      <DependentUpon>fQuanLyPhong.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form3.resx">
-      <DependentUpon>Form3.cs</DependentUpon>
+    <EmbeddedResource Include="fThemDonDatPhong.resx">
+      <DependentUpon>fThemDonDatPhong.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LoaiPhong.resx">
-      <DependentUpon>LoaiPhong.cs</DependentUpon>
+    <EmbeddedResource Include="fThemKhachHang.resx">
+      <DependentUpon>fThemKhachHang.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fThongTinKhachHang.resx">
+      <DependentUpon>fThongTinKhachHang.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -112,12 +109,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="SuaThongTinKhachHang.resx">
-      <DependentUpon>SuaThongTinKhachHang.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SuaThongTinNguoiDung.resx">
-      <DependentUpon>SuaThongTinNguoiDung.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
