--- a/quanlydatphongkhachsan/quanlydatphongkhachsan.csproj
+++ b/quanlydatphongkhachsan/quanlydatphongkhachsan.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>quanlydatphongkhachsan.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -82,6 +85,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QUANLYDATPHONGKHACHSAN1DataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QUANLYDATPHONGKHACHSAN1DataSet.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="fGiaoDienChinh.resx">
       <DependentUpon>fGiaoDienChinh.cs</DependentUpon>
     </EmbeddedResource>
@@ -118,6 +126,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="QUANLYDATPHONGKHACHSAN1DataSet.xsc">
+      <DependentUpon>QUANLYDATPHONGKHACHSAN1DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="QUANLYDATPHONGKHACHSAN1DataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>QUANLYDATPHONGKHACHSAN1DataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="QUANLYDATPHONGKHACHSAN1DataSet.xss">
+      <DependentUpon>QUANLYDATPHONGKHACHSAN1DataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
