--- a/quanlydatphongkhachsan/quanlydatphongkhachsan.csproj
+++ b/quanlydatphongkhachsan/quanlydatphongkhachsan.csproj
@@ -101,6 +101,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>QUANLYDATPHONGKHACHSAN1DataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="ThongKe.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ThongKe.Designer.cs">
+      <DependentUpon>ThongKe.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="fGiaoDienChinh.resx">
       <DependentUpon>fGiaoDienChinh.cs</DependentUpon>
     </EmbeddedResource>
@@ -126,6 +132,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ThongKe.resx">
+      <DependentUpon>ThongKe.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
