Fix combo and refactor code

--- a/quanlydatphongkhachsan/quanlydatphongkhachsan.csproj
+++ b/quanlydatphongkhachsan/quanlydatphongkhachsan.csproj
@@ -151,12 +151,23 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\button-login.png" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\login-screen.jpg" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\btn-login.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\exit.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\user.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\password.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
